# sql-learning-materials

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.editor_config/: bill-editor-config.xml  bills-style-editor-config.xml  snowflake-editor-config.xml
.github/workflows/: generate-docs.yaml
challenging-sql-problems/challenging-sql-problems/: index.html
challenging-sql-problems/problems/bronze/: combining-dimensions.sql  customer-churn--sample-input.sql  customer-churn--sample-output.sql  customer-churn.sql  fibonacci-sequence--sample-output.sql  outstanding-invoices--sample-input.sql  outstanding-invoices--sample-output.sql  outstanding-invoices.sql  personalised-customer-emails.sql  suspicious-login-activity--sample-input.sql  suspicious-login-activity--sample-output.sql  suspicious-login-activity.sql  temperature-anomaly-detection--sample-input.sql  temperature-anomaly-detection.sql  uk-bank-holidays--sample-output.sql
challenging-sql-problems/problems/gold/: encoding-datelist-ints--sample-output.sql  loan-repayment-schedule--sample-input.sql  loan-repayment-schedule--sample-output.sql  loan-repayment-schedule.sql  supply-chain-network--sample-input.sql  supply-chain-network--sample-output.sql  travel-plans--sample-input.sql  travel-plans--sample-output.sql  travel-plans.sql
challenging-sql-problems/problems/silver/: bannable-login-activity--sample-input.sql  bannable-login-activity--sample-output.sql  bus-routes--sample-input.sql  bus-routes.sql  customer-sales-running-totals--sample-input.sql  customer-sales-running-totals--sample-output.sql  funnel-analytics--sample-input.sql  funnel-analytics.sql  metric-correlation--sample-output.sql  metric-correlation.sql  predicting-values--sample-input.sql  predicting-values--sample-output.sql  predicting-values.sql  region-precipitation--sample-output.sql
challenging-sql-problems/solutions/bronze/: combining-dimensions--duckdb.sql  combining-dimensions.sql  customer-churn--duckdb.sql  customer-churn.sql  fibonacci-sequence--sql-server.sql  fibonacci-sequence.sql  outstanding-invoices.sql  personalised-customer-emails--duckdb.sql  suspicious-login-activity--duckdb.sql  suspicious-login-activity--sql-server.sql  temperature-anomaly-detection--duckdb.sql  temperature-anomaly-detection--sql-server.sql  temperature-anomaly-detection.sql  uk-bank-holidays--duckdb.sql  uk-bank-holidays.sql
challenging-sql-problems/solutions/gold/: encoding-datelist-ints--duckdb.sql  encoding-datelist-ints.sql  loan-repayment-schedule--duckdb.sql  loan-repayment-schedule.sql  risk-invasions--duckdb.sql  risk-invasions.sql  travel-plans--duckdb.sql
challenging-sql-problems/solutions/silver/: bannable-login-activity--duckdb.sql  bannable-login-activity.sql  bus-routes--duckdb.sql  bus-routes--sql-server.sql  bus-routes.sql  customer-sales-running-totals--sql-server.sql  customer-sales-running-totals.sql  decoding-datelist-ints--duckdb.sql  metric-correlation--duckdb.sql  predicting-values--duckdb--manual.sql  predicting-values.sql  region-precipitation--duckdb.sql  region-precipitation--sql-server.sql  region-precipitation.sql
challenging-sql-problems/topics/: index.html
dockerfiles/: mssql.Dockerfile  postgres.Dockerfile
docs/: index.md
docs/challenging-sql-problems/: challenging-sql-problems.md  topics.md
docs/everything-about-joins/: everything-about-joins.md
docs/everything-about-joins/syntax/: explosive-joins.md  filtering-joins.md  glue-joins.md  join-fundamentals.md  more-fundamentals.md  sql-92-rant.md  timestamp-joins.md
docs/everything-about-joins/under-the-hood/: hash-joins.md  join-order.md  joins-with-an-index.md  loop-joins.md  merge-joins.md  range-intersection-joins.md
docs/from-excel-to-sql/: from-excel-to-sql.md
docs/from-excel-to-sql/advanced-concepts/: advanced-aggregations.md  correlated-subqueries.md  recursive-ctes.md  window-function-options.md
docs/from-excel-to-sql/getting-started/: setting-the-context.md  sql-syntax.md
docs/from-excel-to-sql/main-concepts/: comments.md  conditionals.md  data-types.md  date-formatting.md  group-by.md  join.md  logical-processing-order.md  operators.md  order-by.md  rollup.md  select-and-from.md  style-guide.md  subqueries.md  top-and-distinct.md  union.md  where.md  window-functions.md
docs/sql-reference/: sql-reference.md
docs/sql-reference/clauses/: group-by.sql  join.sql  order-by.sql  pivot.sql  qualify.sql  sample.sql  select.sql  union.sql  values.sql  where.sql  window.sql  with.sql
docs/sql-reference/features/: correlated-subqueries.sql  graphs.sql  recursive-ctes.sql  window-functions.sql
docs/sql-reference/functions/: soundex.sql  try-cast.sql
docs/sql-reference/internals/: ansi.sql  collation.sql  indexes.sql  transactions.sql
docs/ultimate-sql-setup-guide/: ultimate-sql-setup-guide.md
everything-about-joins/everything-about-joins/: index.html
from-excel-to-sql/from-excel-to-sql/: index.html
search/: search_index.json
src/: __init__.py  _constants.py
src/metabase/: __main__.py  databases.toml
src/profiler/: __main__.py
src/resources/: __main__.py  resources.schema.json  resources.toml
tests/: test__resources.py
(+215 files in other folders)
