[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "sql-learning-materials"
version = "0.0.0"
description = "SQL scripts that demonstrate various features and concepts."
authors = ["Bilbottom"]
readme = "README.md"
keywords = ["sql", "sql-server", "postgres", "sqlite", "duckdb"]
repository = "https://github.com/Bilbottom/sql-learning-materials"
packages = [
    { include = "profiler", from = "src" },
    { include = "resources", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
# Pinned since DuckDB has breaking changes with each release until version 1.0.0
duckdb = "0.9.2"
pyodbc = "^5.1.0"

[tool.poetry.group]
dev.optional = true
test.optional = true
docs.optional = true
ide.optional = true

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
pre-commit = "^3.4"
db-query-profiler = "^0.0.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-callouts = "^1.10.0"
markdown-callouts = "^0.3.0"
mdx-truly-sane-lists = "^1.3"

[tool.poetry.group.ide.dependencies]
black = "*"


[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
testpaths = [
    "tests",
]


[tool.black]
target_version = ["py311"]
line-length = 80


[tool.isort]
profile = "black"
line_length = 80


[tool.pylint.format]
max-line-length = 80

[tool.pylint.MASTER]
ignore-paths = "^tests/.*$"
