[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "sql-learning-materials"
version = "0.0.0"
description = "SQL scripts that demonstrate various features and concepts."
authors = ["Bilbottom"]
readme = "README.md"
keywords = ["sql", "sql-server", "postgres", "sqlite", "duckdb"]
repository = "https://github.com/Bilbottom/sql-learning-materials"
packages = [
    { include = "profiler", from = "src" },
    { include = "resources", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "1.0.0"
pyodbc = "^5.1.0"  # SQL Server driver
psycopg2 = "^2.9.9"  # PostgreSQL driver

[tool.poetry.group]
dev.optional = true
test.optional = true
docs.optional = true

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
pre-commit = "^3.4"
db-query-profiler = "^0.0.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-callouts = "^1.10.0"
markdown-callouts = "^0.3.0"
mdx-truly-sane-lists = "^1.3"


[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
]
